# MLX90640_ThermalCamera_esp32s3

./: README.md  sdkconfig
main/: CMakeLists.txt  MLX90640_API.c  MLX90640_API.h  MLX90640_I2C_Driver.c  MLX90640_I2C_Driver.h  idf_component.yml  main.c  st7789.c  st7789.h
